--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "barryvdh/laravel-elfinder": "^0.3.12",
         "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "^6.3",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0"
     },
